syntax = "proto3";

package bandit.services.banditindexer;

option go_package = "./banditindexer";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service BanditIndexerService {
  rpc GetRuleScores(GetRuleScoresRequest) returns (GetRuleScoresResponse) {
    option (google.api.http) = {
      get: "/v1/indexer/rule/{id}"
    };
  };
}

message GetRuleScoresRequest {
  string id = 1; 
}

message GetRuleScoresResponse {
  uint64 version = 1;
  repeated Variant variants = 2; 
}

message Variant {
  string id = 1;
  double score = 2; 
  uint64 count = 3;
}
